edit mobile alignment issues, ready for review

--- a/styles.scss
+++ b/styles.scss
@@ -28,50 +28,38 @@ $debug_border_color: rgba(255, 0, 0, 0);
     @include debug($bg_color:$debug_color_2);
     margin-top: $margin_top;
     margin-bottom: $margin_bottom;
+    margin-left: 0px;
+    margin-right: 0px;
     min-height: $min_height;
     width: $width;
 }
 
 
 html {
-    width: 100%;
-    height: 100%;   
+    display: flex;
+    justify-content: center;
 }
 
 body {
-    background-color: white;
-    gap:10px;
+    width: 95vw;
+    height: 100%;
+    padding-left: 2.5vw;
+    // padding-right: 2.5vw;
 }
 
 header {
-    @include debug();
-    height: 15vh;
-    // width: 100vw;
-    display: flex;
-    justify-content: center;
-
-    img {
-        height: 100%;
-        // filter:invert(1);
-        // width: auto;
-        // filter: grayscale();
-    }
-}
-
-.banner_row {
     @include content_settup($min_height:15vh);
-    margin-top: 0px;
-    display: flex;
-    justify-content: center;
-    align-items: start;
+    margin-top: 5px;
+    // padding: 5px;
 
     img {
         width: 100%;
         height: auto;
-        overflow: hidden;
+        // overflow: hidden;
         // filter:invert(1);
     }
 }
+
 
 
 @media screen and (min-width:1200px) {
@@ -79,11 +67,11 @@ header {
     .row_2{
         @include content_settup();
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: 1fr 2fr;
         grid-template-rows:60vh;
         background-color: black;
         .text {
-            grid-column: 2/-1;
+            grid-column: 2;
             width: 100%;
             height: 100%;
             display: flex;
@@ -105,23 +93,24 @@ header {
     .row_2{
         @include content_settup();
         display: grid;
-        grid-template-columns: 100vw;
+        grid-template-columns: 100%;
         grid-template-rows:60vh auto;
+        justify-self: center;
         
         .text {
             grid-column: 1;
             grid-row: 2;
-            width: 100%;
+            width: 90%;
             height: 100%;
             padding: 20px;
-            // display: flex;
-            // flex-direction: column;
-            // align-items: center;
-            // justify-content: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             color: $font_color;
             p {
-                padding-right: 10vw;
+                // padding-right: 10vw;
             }
         }
         img {
